refactor: simplify architecture and remove advanced duplicates
- Consolidate logger and retrieval systems
- Remove advanced/duplicate implementations
- Fix build dependencies and include paths
- Improve compilation and maintainability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,8 @@ add_subdirectory(external)
 
 set(NLOHMANN_JSON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann")
 if(EXISTS "${NLOHMANN_JSON_DIR}/json.hpp")
-    include_directories(${NLOHMANN_JSON_DIR})
+    # Add as SYSTEM include with highest priority to override kolosal-server's version
+    include_directories(SYSTEM BEFORE ${NLOHMANN_JSON_DIR})
     message(STATUS "Using nlohmann/json from: ${NLOHMANN_JSON_DIR}")
 else()
     message(FATAL_ERROR "nlohmann/json not found at ${NLOHMANN_JSON_DIR}")
@@ -150,14 +151,13 @@ set(CORE_SOURCES
     src/core/logger.cpp
     src/core/server_launcher.cpp
     src/core/main.cpp
-    src/core/retrieval_enhanced.cpp
+    src/core/retrieval.cpp
 )
 
 set(API_SOURCES
     src/api/server_http.cpp
     src/api/metrics.cpp
     src/api/service_async.cpp
-    src/api/logger_advanced.cpp
 )
 
 set(WORKFLOW_SOURCES
@@ -199,6 +199,11 @@ set_target_properties(kolosal-agent PROPERTIES
     CXX_EXTENSIONS OFF
     OUTPUT_NAME "kolosal-agent"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+)
+
+# Ensure kolosal-agent uses the correct nlohmann/json version
+target_include_directories(kolosal-agent PRIVATE
+    "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann"
 )
 
 # Add /FS flag specifically to the kolosal-agent target for MSVC
@@ -302,10 +307,10 @@ if(BUILD_KOLOSAL_SERVER)
     add_subdirectory(kolosal-server)
     
     # Add kolosal-server include directories for retrieval functionality
-    target_include_directories(kolosal-agent PRIVATE 
-        ${CMAKE_CURRENT_SOURCE_DIR}/kolosal-server/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/kolosal-server/inference/include
-    )
+    # target_include_directories(kolosal-agent PRIVATE 
+    #     ${CMAKE_CURRENT_SOURCE_DIR}/kolosal-server/include
+    #     ${CMAKE_CURRENT_SOURCE_DIR}/kolosal-server/inference/include
+    # )
     
     # Link kolosal-server to main executable for retrieval capabilities
     target_link_libraries(kolosal-agent PRIVATE kolosal_server)
