feat: Enhanced workflow orchestration with comprehensive REST API and retry mechanisms
- Add complete CRUD operations for workflow definitions (GET, PUT, DELETE /workflows/{id})
- Implement workflow templates system with built-in templates for research, analysis, pipeline, and decision workflows
- Add detailed execution progress tracking and logging endpoints (/workflow_executions/{id}/progress, /logs)
- Introduce configurable retry policies with exponential backoff for workflow steps
- Enhance condition evaluation with complex AND/OR/NOT logic support
- Add workflow persistence layer with JSON serialization to disk
- Implement step execution statistics and comprehensive error tracking
- Add execution context injection and enhanced parameter resolution
- Fix JSON exception handling to use proper exceptions instead of abort()
- Extend workflow execution state with detailed progress metrics and step-level tracking

Breaking changes:
- Modified WorkflowStep and WorkflowDefinition structures with new fields
- Enhanced REST API with additional endpoints for workflow management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,11 @@ set(NLOHMANN_JSON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann")
 if(EXISTS "${NLOHMANN_JSON_DIR}/json.hpp")
     # Add as SYSTEM include with highest priority to override kolosal-server's version
     include_directories(SYSTEM BEFORE ${NLOHMANN_JSON_DIR})
+    
+    # Ensure JSON exceptions are enabled instead of calling abort()
+    add_compile_definitions(JSON_THROW_USER=throw)
+    add_compile_definitions(JSON_NOEXCEPTION=0)
+    
     message(STATUS "Using nlohmann/json from: ${NLOHMANN_JSON_DIR}")
 else()
     message(FATAL_ERROR "nlohmann/json not found at ${NLOHMANN_JSON_DIR}")
