feat: Add environment variable support to configuration system
- Add comprehensive environment variable substitution to all YAML configs
- Update agent.yaml, config.yaml with  syntax for all settings
- Externalize API keys, paths, and sensitive configuration to env vars
- Enhance .gitignore with comprehensive patterns for Python, logs, and secrets
- Update README.md with environment variable setup guide and security features
- Add documentation references for env vars and config migration
- Improve security by removing hardcoded paths and API keys
- Support cross-platform configuration with relative paths

BREAKING CHANGE: Configuration files now use environment variable substitution.
Users should migrate to .env files or set environment variables before starting.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@
 *.out
 *.app
 
-
 # Build Files
 build*
 *.cmake
@@ -43,15 +42,70 @@ build*
 *.dll
 *.exe
 
+# Logs
 *.log
+logs/
 
-# model for testing
+# Models for testing
 models/*
 
-# python codes
+# Python files and virtual environments
 *.py
 pythons/*
 .venv*
+.venv/
+venv/
+env/
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
 
+# Jupyter Notebook
+.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Test builds
 tests_build/
+
+# Environment variables and secrets (SECURITY)
+.env
+.env.*
+!.env.template
+!.env.example
+
+# Local configuration overrides
+config.local.yaml
+agent.local.yaml
+workflow.local.yaml
+
+# Data directories
+data/
+cache/
+tmp/
+temp/
+
+# IDE and editor files
+.vscode/settings.json
+.vscode/launch.json
+*.swp
+*.swo
+*~
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Backup files
+*.backup
+*.bak
+*.orig
