security: Remove hardcoded values and improve configuration security
- Remove hardcoded CORS origins and API keys from config files
- Update .env.template with security warnings and best practices
- Add comprehensive security configuration documentation to README
- Set secure defaults (empty arrays instead of wildcard origins)
- Add production security checklist and migration guide
- Emphasize environment variable usage for sensitive settings

This change improves security posture by removing insecure defaults
and providing clear guidance for production deployments.

--- a/.env.template
+++ b/.env.template
@@ -123,17 +123,27 @@ KOLOSAL_HEALTH_CHECK=true
 # SECURITY AND AUTHENTICATION
 # =============================================================================
 
-# Enable authentication
+# Enable authentication (set to true for production)
 KOLOSAL_ENABLE_AUTH=false
 KOLOSAL_REQUIRE_API_KEY=false
 
-# CORS settings
+# CORS settings (IMPORTANT: Configure specific origins for production)
 KOLOSAL_ENABLE_CORS=true
-KOLOSAL_CORS_ORIGIN_1=*
+# DO NOT use "*" in production - specify exact origins:
+# KOLOSAL_CORS_ORIGIN_1=https://yourdomain.com
+# KOLOSAL_CORS_ORIGIN_2=https://app.yourdomain.com
+KOLOSAL_CORS_ORIGIN_1=
 
-# Rate limiting
+# Rate limiting (adjust based on your needs)
 KOLOSAL_RATE_LIMIT_REQUESTS=100
 KOLOSAL_RATE_LIMIT_WINDOW=60
+
+# SECURITY NOTES:
+# - Generate unique, strong API keys for production
+# - Never use wildcard (*) CORS origins in production
+# - Enable authentication for public deployments
+# - Regularly rotate API keys
+# - Use HTTPS in production environments
 
 # =============================================================================
 # PERFORMANCE TUNING
