--- a/config.yaml
+++ b/config.yaml
@@ -14,8 +14,7 @@ auth:
   enabled: false
   require_api_key: false
   api_key_header: X-API-Key
-  api_keys:
-    []
+  api_keys: []
   rate_limit:
     enabled: true
     max_requests: 100
@@ -24,8 +23,7 @@ auth:
     enabled: true
     allow_credentials: false
     max_age: 86400
-    allowed_origins:
-      - "*"
+    allowed_origins: []
     allowed_methods:
       - GET
       - POST
